footer, cross, tick

--- a/style.css
+++ b/style.css
@@ -73,3 +73,15 @@ th {
   align-items: center;
   justify-content: center;
 }
+
+.footer {
+  border-radius: 10px;
+  color: white;
+  background-color: black;
+  margin-top: 200px;
+  padding: 0px 20px;
+}
+a {
+  color: wheat;
+  /* background-color: white; */
+}
