--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ th {
   color: white;
   bottom: 0;
   background-color: black;
-  margin-top: 100px;
+  margin-top: 10px;
   padding: 10px 20px;
 }
 
@@ -120,4 +120,24 @@ body {
 
 #hide {
   display: none;
+}
+
+ul {
+  align-items: center;
+}
+
+ul li {
+  font-size: 20px;
+  margin: 8px 35px;
+}
+
+h3 {
+  font-size: 23px;
+  display: flex;
+  margin: 5px 5px;
+  justify-content: center;
+}
+
+.bottom {
+  margin-bottom: 14px;
 }
