--- a/style.css
+++ b/style.css
@@ -3,6 +3,29 @@
   margin: 0;
 }
 
+#set {
+  color: white;
+  background-color: black;
+  border-radius: 7px;
+  height: 23px;
+}
+
+#type {
+  font-family: "Raleway", sans-serif;
+  color: white;
+  background-color: black;
+  border-radius: 7px;
+  height: 25px;
+}
+
+#mod {
+  color: white;
+  background-color: black;
+  border-radius: 7px;
+  height: 23px;
+  width: 50px;
+}
+
 .cool_font {
   font-family: "Rampart One", cursive;
 }
@@ -22,8 +45,9 @@ h1 {
   display: flex;
   justify-content: center;
   margin: 0px 0px;
+  width: 100%;
   /* border-radius: 20px; */
-  padding: 8px 18px;
+  padding: 8px 0px;
   font-size: 40px;
   color: white;
   background-color: black;
@@ -31,19 +55,21 @@ h1 {
 }
 
 p {
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
   margin: 8px 15px;
   /* margin: 5px 5px; */
 }
 
-.submitButton {
-  margin: 13px 5px;
+.submitButton,
+.reset {
+  margin: 10px 5px;
   font-size: larger;
   color: white;
-  background-color: black;
+  background-color: rgb(61, 61, 247);
   border-radius: 10px;
-  width: 130px;
-  height: 40px;
+  width: 110px;
+  height: 35px;
 }
 
 #cayleyTable {
@@ -77,7 +103,6 @@ th {
 }
 
 .tableart {
-  background-color: antiquewhite;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
@@ -89,13 +114,12 @@ th {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* position: fixed;
-  /* width: 100%; */
+  width: 100%;
   color: white;
   bottom: 0;
   background-color: black;
   margin-top: 10px;
-  padding: 10px 20px;
+  padding: 2px 0px;
 }
 
 .footer p,
@@ -115,7 +139,6 @@ h2 {
 }
 
 body {
-  background-color: antiquewhite;
 }
 
 #hide {
